--- a/Timer App/Timer App/Base.lproj/Main.storyboard
+++ b/Timer App/Timer App/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,73 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Timer_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gy2-jN-w7n">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="nBi-c2-TnJ"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Stopwatch" id="HP5-EG-7A4"/>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bed-jQ-fjR">
+                                <rect key="frame" x="0.0" y="579" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="HkX-vG-oKr"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="refresh" id="Kdw-Bo-IKn">
+                                        <connections>
+                                            <action selector="refresh:" destination="BYZ-38-t0r" id="jDi-ME-8T8"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="M7d-xX-fVX"/>
+                                    <barButtonItem systemItem="play" id="3Iy-hX-32S">
+                                        <connections>
+                                            <action selector="play:" destination="BYZ-38-t0r" id="8dn-uD-ag0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="FJE-iB-meG"/>
+                                    <barButtonItem systemItem="pause" id="6nT-yy-5mp">
+                                        <connections>
+                                            <action selector="pause:" destination="BYZ-38-t0r" id="bXg-br-gOw"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXP-ZV-zIZ">
+                                <rect key="frame" x="27" y="253" width="320" height="161"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bed-jQ-fjR" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="HUh-Xv-4of"/>
+                            <constraint firstItem="bed-jQ-fjR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Oin-pC-WIE"/>
+                            <constraint firstItem="bed-jQ-fjR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Spl-RO-ljc"/>
+                            <constraint firstItem="gy2-jN-w7n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Wl5-Ly-SAf"/>
+                            <constraint firstItem="gy2-jN-w7n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hrr-RQ-aH0"/>
+                            <constraint firstItem="gy2-jN-w7n" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vpY-Hz-kjl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="secondsLabel" destination="RXP-ZV-zIZ" id="f1G-nF-vUa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
 </document>
