update ReadMe and make sure that timer doesn't start twice

--- a/Timer App/Timer App/Base.lproj/Main.storyboard
+++ b/Timer App/Timer App/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 </items>
                             </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXP-ZV-zIZ">
-                                <rect key="frame" x="27" y="253" width="320" height="161"/>
+                                <rect key="frame" x="123" y="313" width="129" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -73,7 +73,7 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="secondsLabel" destination="RXP-ZV-zIZ" id="f1G-nF-vUa"/>
+                        <outlet property="timeLabel" destination="RXP-ZV-zIZ" id="Cpr-vR-HbK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
